# ITKv4-TheNextGeneration-Tutorial

./: .gitignore  CMakeLists.txt  README
Exercises/: CMakeLists.txt  ImageReadWrite.cxx
Exercises/LevelSets/: CMakeLists.txt  SingleLevelSetWhitaker.cxx
Exercises/LevelSets/Source/: CMakeLists.txt  LevelSetExercise1.cxx  LevelSetExercise1Answer.cxx  LevelSetExercise2.cxx  SingleLevelSetWhitaker.cxx  itkImageToRGBVTKImageFilter.h  itkImageToVTKImageFilter.h  itkImageToVTKImageFilter.hxx  itkShiCommandIterationUpdate.h  itkWhitakerCommandIterationUpdate.h  vtkCaptureScreen.h  vtkVisualize2DShiLevelSetLayers.h  vtkVisualize2DWhitakerLevelSetLayers.h
Exercises/Modularization/IJ-submission-rat/: CMakeLists.txt  check.cxx  itkRobustAutomaticThresholdCalculator.h  itkRobustAutomaticThresholdImageFilter.h
Exercises/Modularization/IJ-submission-rat/Wrapping/: CMakeLists.txt
Exercises/Modularization/IJ-submission-rat/article/: Article.tex  InsightJournal.bib  Makefile
Exercises/Modularization/RAT/: CMakeLists.txt  itk-module.cmake
Exercises/Modularization/RAT/include/: itkRobustAutomaticThresholdCalculator.h  itkRobustAutomaticThresholdImageFilter.h  itkRobustAutomaticThresholdImageFilter.hxx
Exercises/Modularization/RAT/test/: CMakeLists.txt  itkRobustAutomaticThresholdImageFilterTest.cxx
Exercises/Modularization/nothingtoseehere/RAT/include/: itkRobustAutomaticThresholdCalculator.h  itkRobustAutomaticThresholdCalculator.hxx  itkRobustAutomaticThresholdImageFilter.h
Exercises/Registration/: CMakeLists.txt  README  RegistrationExercises.cxx  Rigid2DRegistration.cxx  plot_registration.py
Exercises/Registration/include/: itkANTSNeighborhoodCorrelationImageToImageObjectMetric.h  itkANTSNeighborhoodCorrelationImageToImageObjectMetric.hxx  itkGaussianSmoothingOnUpdateDisplacementFieldTransform2.h  itkGaussianSmoothingOnUpdateDisplacementFieldTransform2.hxx  itkImageToImageNeighborhoodNormalizedCrossCorrelationFunction.h  itkImageToImageObjectMetric.h  itkImageToImageObjectMetric.hxx  itkMeanSquaresImageToImageObjectMetric.h  itkMeanSquaresImageToImageObjectMetric.hxx  itkOptimizerParameterScaleEstimator.h  itkPolyAffineTransform.h  itkPolyAffineTransform.hxx  itkQuasiNewtonLocalSupportObjectOptimizer.h  itkQuasiNewtonObjectOptimizer.h  itkRegistrationParameterScaleEstimator.h  itkRegistrationParameterScaleEstimator.hxx  itkRegistrationParameterScalesFromJacobian.h  itkRegistrationParameterScalesFromJacobian.hxx  itkRegistrationParameterScalesFromShift.h  itkRegistrationParameterScalesFromShift.hxx  itkThevenazMutualInformationImageToImageObjectMetric.h  itkThevenazMutualInformationImageToImageObjectMetric.hxx
Exercises/Registration/src/: CMakeLists.txt  itkQuasiNewtonLocalSupportObjectOptimizer.cxx  itkQuasiNewtonObjectOptimizer.cxx
Exercises/Registration/test/: CMakeLists.txt  install_registration_code.cxx  itkANTSNeighborhoodCorrelationImageToImageObjectRegistrationTest.cxx  itkANTSNeighborhoodCorrelationImageToImageObjectRegistrationTest2.cxx  itkANTSSparseNeighborhoodCorrelationImageToImageObjectRegistrationTest.cxx  itkDemonsImageToImageObjectRegistrationTest.cxx  itkDemonsImageToImageObjectRegistrationTest2.cxx  itkDemonsVectorImageToVectorImageObjectRegistrationTest.cxx  itkOptimizerParameterScaleEstimatorTest.cxx  itkPolyAffineTransformTest.cxx  itkQuasiNewtonDemonsRegistrationTest.cxx  itkQuasiNewtonObjectOptimizerTest.cxx  itkQuasiNewtonRegistrationTest.cxx  itkRegistrationParameterScaleEstimatorTest.cxx  itkRegistrationParameterScalesFromShiftTest.cxx  itkThevenazMutualInformationImageToImageObjectRegistrationTest.cxx
(+55 files in other folders)
